placeholder component added

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,9 @@
-<p>home works!</p>
+<!-- @format -->
+
+<h1>Component Demonstration</h1>
+<p>
+    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dignissimos ea
+    error, quos ratione delectus sunt perspiciatis tempora minima distinctio
+    maxime eveniet veritatis reprehenderit accusantium placeat atque similique,
+    corporis ex. Quos.
+</p>
