collections module + Table component added

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,9 +1,4 @@
-<!-- @format -->
-
 <h1>Component Demonstration</h1>
 <p>
-    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dignissimos ea
-    error, quos ratione delectus sunt perspiciatis tempora minima distinctio
-    maxime eveniet veritatis reprehenderit accusantium placeat atque similique,
-    corporis ex. Quos.
+  This app will show how to use a couple of different components
 </p>
